--- a/camframe.html
+++ b/camframe.html
@@ -3,59 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Intro</title>
+    <link rel="stylesheet" href="./styles/camframe.css" />
+    <title>CamFrame</title>
   </head>
   <body>
-    <div id="frame">
+    <div id="camframe">
+      <img id="logo" src="./assets/images/logo.png" width="164px" />
       <div id="social">
-        <div class="container">
-          <svg
-            class="icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 448 512"
-          >
-            <path
-              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
-            />
-          </svg>
-          @guipaex
+        <div id="logos">
+          <img class="icon" src="./assets/icons/instagram.svg" />
+          <img class="icon" src="./assets/icons/tiktok.svg" />
+          <img class="icon" src="./assets/icons/youtube.svg" />
+          <img class="icon" src="./assets/icons/twitch.svg" />
         </div>
-        <div class="container">
-          <svg
-            class="icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 448 512"
-          >
-            <path
-              d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"
-            />
-          </svg>
-          @guipaex
-        </div>
-        <div class="container">
-          <svg
-            class="icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
-            />
-          </svg>
-          @gui_paex
-        </div>
-        <div class="container">
-          <svg
-            class="icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 576 512"
-          >
-            <path
-              d="M232 237.2c31.8-15.2 48.4-38.2 48.4-74 0-70.6-52.6-87.8-113.3-87.8H0v354.4h171.8c64.4 0 124.9-30.9 124.9-102.9 0-44.5-21.1-77.4-64.7-89.7zM77.9 135.9H151c28.1 0 53.4 7.9 53.4 40.5 0 30.1-19.7 42.2-47.5 42.2h-79v-82.7zm83.3 233.7H77.9V272h84.9c34.3 0 56 14.3 56 50.6 0 35.8-25.9 47-57.6 47zm358.5-240.7H376V94h143.7v34.9zM576 305.2c0-75.9-44.4-139.2-124.9-139.2-78.2 0-131.3 58.8-131.3 135.8 0 79.9 50.3 134.7 131.3 134.7 61.3 0 101-27.6 120.1-86.3H509c-6.7 21.9-34.3 33.5-55.7 33.5-41.3 0-63-24.2-63-65.3h185.1c.3-4.2 .6-8.7 .6-13.2zM390.4 274c2.3-33.7 24.7-54.8 58.5-54.8 35.4 0 53.2 20.8 56.2 54.8H390.4z"
-            />
-          </svg>
-          /guilhermepaes
-        </div>
+        @guipaex
       </div>
     </div>
     <div id="bar-container">
@@ -67,113 +28,9 @@
       ></video>
     </div>
   </body>
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Sora&display=swap");
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Sora", sans-serif;
-      font-weight: 600;
-    }
-    body {
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-    #frame {
-      width: 100vw;
-      height: 75vh;
-      border: 10px solid #bbff00;
-      border-radius: 1rem;
-      filter: drop-shadow(0 8px 8px black);
-    }
-    #social {
-      width: 100vw;
-    }
-    #bar-container {
-      width: 100vw;
-      height: 20vh;
-      margin-top: 1rem;
-      position: relative;
-      overflow: hidden;
-      border-radius: 1rem;
-      border: 1px solid grey;
-      background: url("https://cdn.streamelements.com/uploads/01jtxt3hkzmca0rwpf0s7a7vzb.mp4");
-    }
-    #bg-container {
-      width: 100%;
-    }
-    .container {
-      color: white;
-      font-size: 2.5rem;
-      fill: white;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 1.5rem;
-      position: absolute;
-      left: 0;
-      top: 0;
-      opacity: 0;
-      pointer-events: none;
-      transform: translateY(5rem);
-      transition: opacity 0.5s, transform 0.5s;
-      z-index: 1;
-    }
-    .container.active {
-      opacity: 1;
-      pointer-events: auto;
-      animation: slideUpIn 0.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
-      z-index: 2;
-    }
-    .container.out {
-      opacity: 0;
-      pointer-events: none;
-      animation: slideUpOut 0.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
-      z-index: 1;
-    }
-    .icon {
-      height: 4rem;
-    }
-
-    @keyframes slideUp {
-      from {
-        opacity: 0;
-        transform: translateY(5rem);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    @keyframes slideUpIn {
-      from {
-        opacity: 0;
-        transform: translateY(5rem);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    @keyframes slideUpOut {
-      from {
-        opacity: 1;
-        transform: translateY(0);
-      }
-      to {
-        opacity: 0;
-        transform: translateY(-5rem);
-      }
-    }
-  </style>
+  <style></style>
   <script>
-    const containers = document.querySelectorAll(".container");
+    const containers = document.querySelectorAll(".icon");
     let current = 0;
 
     function showContainer(idx) {
